@@ -406,7 +406,10 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   call to cleanRamCache in MeetingConfig.at_post_edit_script is not enough when using several ZEO instances
 - Make sure it is not possible to paste config items (ItemTemplate, RecurringItem) from a MeetingConfig to another as the copy/paste
   buttons are enabled in the item templates management configuration
-- Added an email notification when advice delay is about to expire and an email notification when advice delay is expired
+- Added an email notification when advice delay is about to expire and an email notification when advice delay is expired, factorized
+  code that sends email to members of a particular Plone group into MeetingItem._sendMailToGroupMembers and use it in both
+  MeetingItem.sendAdviceDelayWarningMailIfRelevant (advice delay expiration/expired notification)
+  and MeetingItem.sendAdviceToGiveMailIfRelevant (advice to give notification)
 
 3.3 (2015-02-27)
 ----------------
